# sdds

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  endian.h  endian_gnu.h  endian_win.h  main.cpp  sddslib.cpp  sddslib.h
